@@ -189,3 +189,7 @@ BYE=quit
 
 ## Clear suffix-based implicit rule table.
 .SUFFIXES:
+
+PREGENERATED=@PREGENERATED@
+PACKAGE_VERSION = @PACKAGE_VERSION@
+PACKAGE_TARNAME = @PACKAGE_TARNAME@
