@@ -1,5 +1,11 @@
 2013-07-09  Ralf Hemmecke  <ralf@hemmecke.org>
 
+	* Makefile.in, config/var-def.mk, configure.ac,
+	src/algebra/Makefile.in, src/doc/Makefile.in, src/etc/Makefile.in,
+	doc/README.dist: make dist and use pregenerated files
+
+2013-07-09  Ralf Hemmecke  <ralf@hemmecke.org>
+
 	* configure.ac, Makefile.in, src/Makefile.in,
 	src/algebra/Makefile.in, src/doc/Makefile.in,
 	src/etc/spadedit.pamphlet, src/hyper/Makefile.in, src/doc/*:
